--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,43 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
-<body class="bg-indigo-200">
-    hello world
+<body>
+    <header>
+        <div>
+            <img src="../images/icon.png" alt="image of a gulp">
+            <div>FoodForGood</div>
+        </div>
+        <nav>
+            <div>home</div>
+            <div>favorites</div>
+            <div>categories</div>
+            <div>about</div>
+        </nav>
+    </header>
+
+    <main>
+         <div> <!-- the grid -->
+            <div>
+                <img src="../images/foods/burger.jpg" alt="a burger">
+                <div>
+                    <div>ingredients</div>
+                    <div>origins</div>
+                    <div>watch</div>
+                </div>    
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div>
+            <div>
+                <img src="../images/icon.png" alt="image of a gulp">
+                <div>FoodForGood</div>
+            </div>    
+            <div>made with &hearts; by ch33kaboo</div>
+            <div>contact me</div>
+            <div>support us</div>
+        </div>
+    </footer>
 </body>
 </html>
