--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
-<body>
+<body class="bg-indigo-200">
     <header>
         <div>
             <img src="../images/icon.png" alt="image of a gulp">
@@ -22,13 +22,16 @@
     </header>
 
     <main>
-         <div> <!-- the grid -->
-            <div>
-                <img src="../images/foods/burger.jpg" alt="a burger">
-                <div>
-                    <div>ingredients</div>
-                    <div>origins</div>
-                    <div>watch</div>
+         <div class="m-16"> <!-- the grid -->
+            <div class="card">
+                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+                <div class="mx-6 my-4 md:grid md:grid-cols-3">
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                        <div class="card-btn">ingredients</div>
+                        <div class="card-btn">origins</div>
+                        <div class="card-btn">watch</div>
+                    </div>
                 </div>    
             </div>
         </div>
