--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
     <main>
          <div class="m-16"> <!-- the grid -->
-            <div class="card">
+            <div class="card relative">
                 <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
                     <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
@@ -32,7 +32,11 @@
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
                     </div>
-                </div>    
+                </div>
+                <div class="cursor-pointer bg-indigo-600 rounded-full absolute top-0 m-3 text-indigo-50 font-bold py-1 px-2">
+                    <svg class="w-6 h-6 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"></path></svg>
+                    <div class="inline-block">add to favorite</div>
+                </div> 
             </div>
         </div>
     </main>
