--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
 
     <main>
          <div class="m-16"> <!-- the grid -->
+            <!-- there will be a large amount of duplicated code that will generate a bunch of cards for the content of the grid -->
             <div class="card relative">
                 <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
@@ -65,10 +66,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/caesar salad.jpg" alt="a caesar salad" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">caesar salad</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
@@ -90,10 +92,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/couscous.jpg" alt="couscous" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">couscous</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
@@ -115,10 +118,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/falafel.jpg" alt="falafel" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">falafel</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
@@ -140,10 +144,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/hummus.jpg" alt="hummus" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">hummus</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
@@ -165,10 +170,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/karantika.jpg" alt="karantika" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">karantika</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
@@ -190,10 +196,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/pasta.jpg" alt="pasta" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">pasta</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
@@ -215,10 +222,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/pizza.jpg" alt="pizza" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">pizza</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
@@ -240,10 +248,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/suchi.webp" alt="suchi" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">suchi</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
@@ -265,10 +274,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/tacos.jpg" alt="tacos" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">tacos</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
@@ -290,35 +300,11 @@
                 </div> 
             </div>
 
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
-                        <div class="card-btn">ingredients</div>
-                        <div class="card-btn">origins</div>
-                        <div class="card-btn">watch</div>
-                    </div>
-                </div>
-                <div class="fav-btn">
-                    <button class="group relative px-4 text-sm">
-                        <div class="group-focus:opacity-0">
-                            <svg class="w-6 h-6 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"></path></svg>
-                            <div class="inline-block">add to favorite</div>
-                        </div>
 
-                        <div class="inset-0 hidden items-center justify-center group-focus:absolute group-focus:flex">
-                            <svg class="w-6 h-6 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"></path></svg>
-                            <div class="inline-block">added to favorite</div>
-                        </div>
-                    </button>
-                </div> 
-            </div>
-
-            <div class="card relative">
-                <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
+            <div class="card relative"> <!-- annother card -->
+                <img src="../images/foods/tajin.jpg" alt="tajin" class="w-full h-64 object-cover">
                 <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
+                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">tajin</div>
                     <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
