--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
 
     <main>
-         <div class="m-16"> <!-- the grid -->
+         <div class="mx-5 my-14 md:mx-16"> <!-- the grid -->
             <!-- there will be a large amount of duplicated code that will generate a bunch of cards for the content of the grid -->
             <div class="card relative">
                 <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
