made the main content grid for certain screens

--- a/public/index.html
+++ b/public/index.html
@@ -38,14 +38,14 @@
     </header>
 
 
-    <main>
-         <div class="mx-5 my-14 md:mx-16"> <!-- the grid -->
+    <main class="mx-5 my-14 md:mx-16">
+         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8"> <!-- the grid -->
             <!-- there will be a large amount of duplicated code that will generate a bunch of cards for the content of the grid -->
             <div class="card relative">
                 <img src="../images/foods/burger.jpg" alt="a burger" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">burger</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">burger</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -69,9 +69,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/caesar salad.jpg" alt="a caesar salad" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">caesar salad</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">caesar salad</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -95,9 +95,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/couscous.jpg" alt="couscous" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">couscous</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">couscous</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -121,9 +121,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/falafel.jpg" alt="falafel" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">falafel</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">falafel</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -147,9 +147,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/hummus.jpg" alt="hummus" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">hummus</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">hummus</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -173,9 +173,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/karantika.jpg" alt="karantika" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">karantika</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">karantika</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -199,9 +199,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/pasta.jpg" alt="pasta" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">pasta</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">pasta</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -225,9 +225,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/pizza.jpg" alt="pizza" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">pizza</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">pizza</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -251,9 +251,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/suchi.webp" alt="suchi" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">suchi</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">suchi</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -277,9 +277,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/tacos.jpg" alt="tacos" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">tacos</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">tacos</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
@@ -303,9 +303,9 @@
 
             <div class="card relative"> <!-- annother card -->
                 <img src="../images/foods/tajin.jpg" alt="tajin" class="w-full h-64 object-cover">
-                <div class="mx-6 my-4 md:grid md:grid-cols-3">
-                    <div class="text-5xl capitalize text-slate-700 font-bold self-center flex justify-center">tajin</div>
-                    <div class="flex justify-around col-span-2 self-center mt-2 md:mt-0 flex-wrap">
+                <div class="card-description">
+                    <div class="card-title">tajin</div>
+                    <div class="flex justify-around col-span-2 self-center mt-2 flex-wrap">
                         <div class="card-btn">ingredients</div>
                         <div class="card-btn">origins</div>
                         <div class="card-btn">watch</div>
