--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body class="bg-indigo-200">
-    <header class="sticky top-0 z-20 backdrop-blur-xl shadow-lg header">
+    <header class="sticky top-0 z-20 backdrop-blur-xl shadow-lg bg-indigo-400 bg-opacity-70 header">
         <div class="col-span-2 flex m-4 justify-center gap-3 items-center select-none cursor-pointer  hover:scale-105 hover:text-indigo-200 transition-all duration-100 ease-linear">
             <img src="../images/icon.png" alt="image of a gulp" class="hover:rotate-6 transition-all ease-linear">
             <div class="font-dancing text-2xl sm:text-4xl">FoodForGood</div>
@@ -21,20 +21,6 @@
             <div class="nav-item"><div>about</div></div>
         </nav>
         <svg class="w-16 h-16 mx-5 md:hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-    </header>
-    <!-- will duplicate the same nav but with hidden content just to put one on top of the other -->
-    <header class="fixed top-0 z-10 bg-indigo-400 opacity-70 header">
-        <div class="col-span-2 flex m-4 justify-center gap-3 items-center opacity-0">
-            <img src="../images/icon.png" alt="image of a gulp">
-            <div class="font-dancing text-2xl sm:text-4xl">FoodForGood</div>
-        </div>
-        <div></div> <!-- added empty div so that it takes one column in the grid -->
-        <nav class="nav-items">
-            <div class="opacity-0">home</div>
-            <div class="opacity-0">favorites</div>
-            <div class="opacity-0">categories</div>
-            <div class="opacity-0">about</div>
-        </nav>
     </header>
 
 
