--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,25 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
-<body class="bg-indigo-200">
+<body class="bg-indigo-200 overflow-x-hidden">
+
+    <!-- will be creating Building Blurry, Animated Background Shapes first -->
+    <div class="hidden fixed top-0 h-300 w-full xl:block">
+        <div class="absolute top-0 -left-4 w-72 h-72 bg-purple-500 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob"></div>
+        <div class="absolute top-0 left-64 w-72 h-72 bg-yellow-300 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob animation-delay-2000"></div>
+        <div class="absolute left-32 top-24 w-72 h-72 bg-pink-300 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob animation-delay-4000"></div>
+
+        <div class="absolute top-72 -right-4 w-72 h-72 bg-indigo-600 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob animation-delay-4000 translate-y-48"></div>
+        <div class="absolute top-72 right-64 w-72 h-72 bg-green-500 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob animation-delay-2000 translate-y-48"></div>
+        <div class="absolute right-32 top-96 w-72 h-72 bg-pink-300 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob translate-y-48"></div>
+
+        <div class="absolute top-96 left-4 w-72 h-72 bg-pink-300 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob translate-y-72 animation-delay-2000"></div>
+        <div class="absolute top-96 left-72 w-72 h-72 bg-green-500 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob animation-delay-4000 translate-y-72"></div>
+
+        <div class="absolute top-0 -right-32 w-80 h-80 bg-cyan-500 rounded-full filter blur-xl opacity-75"></div>
+    </div>
+    <!-- done with the shapes -->
+
     <header class="sticky top-0 z-20 backdrop-blur-xl shadow-lg bg-indigo-400 bg-opacity-70 header">
         <div class="col-span-2 flex m-4 justify-center gap-3 items-center select-none cursor-pointer  hover:scale-105 hover:text-indigo-200 transition-all duration-100 ease-linear">
             <img src="../images/icon.png" alt="image of a gulp" class="hover:rotate-6 transition-all ease-linear">
