styled the footer

--- a/public/index.html
+++ b/public/index.html
@@ -490,15 +490,17 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="bg-gray-700 rounded-2xl m-2 md:m-4 px-6 py-4">
         <div>
-            <div>
-                <img src="../images/icon.png" alt="image of a gulp">
-                <div>FoodForGood</div>
-            </div>    
-            <div>made with &hearts; by ch33kaboo</div>
-            <div>contact me</div>
-            <div>support us</div>
+
+            <div class="col-span-2 flex m-4 justify-center gap-3 items-center select-none cursor-pointer  hover:scale-105 hover:text-indigo-200 transition-all duration-100 ease-linear">
+                <img src="../images/icon.png" alt="image of a gulp" class="hover:rotate-6 transition-all ease-linear">
+                <div class="font-dancing text-4xl">FoodForGood</div>
+            </div>
+
+            <div class="text-center capitalize animate-chkbo text-lg text-teal-300">made with &hearts; by ch33kaboo</div>
+            <div class="text-center capitalize select-none text-indigo-200 my-2 cursor-pointer hover:scale-110 transition-all ease-in">contact me</div>
+            <div class="text-center capitalize select-none text-indigo-200 my-2 cursor-pointer hover:scale-110 transition-all ease-in">support us</div>
         </div>
     </footer>
 </body>
