--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-indigo-200 overflow-x-hidden">
 
-    <!-- will be creating Building Blurry, Animated Background Shapes first -->
+    <!-- will be creating Building Blurry, Animated Background Shapes first, just for xl screens -->
     <div class="hidden fixed top-0 h-300 w-full xl:block">
         <div class="absolute top-0 -left-4 w-72 h-72 bg-purple-500 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob"></div>
         <div class="absolute top-0 left-64 w-72 h-72 bg-yellow-300 rounded-full mix-blend-multiply filter blur-xl opacity-60 animate-blob animation-delay-2000"></div>
@@ -24,6 +24,12 @@
 
         <div class="absolute top-0 -right-32 w-80 h-80 bg-cyan-500 rounded-full filter blur-xl opacity-75"></div>
     </div>
+    <!-- done with the shapes -->
+
+    <!-- making a similar thing to other screen sizes -->
+    <div class="fixed bottom-4 left-32 w-48 h-48 bg-cyan-500 rounded-full filter blur-xl opacity-75 xl:hidden"></div>
+    <div class="fixed bottom-48 right-40 w-48 h-48 bg-pink-300 rounded-full filter blur-xl opacity-75 xl:hidden"></div>
+    <div class="fixed top-4 -right-24 w-64 h-64 bg-indigo-600 rounded-full filter blur-xl opacity-75 xl:hidden"></div>
     <!-- done with the shapes -->
 
     <header class="sticky top-0 z-20 backdrop-blur-xl shadow-lg bg-indigo-400 bg-opacity-70 header">
@@ -490,17 +496,17 @@
         </div>
     </main>
 
-    <footer class="bg-gray-700 rounded-2xl m-2 md:m-4 px-6 py-4">
+    <footer class="bg-gray-700 rounded-2xl m-2 md:m-4 px-6 py-4 shadow-lg shadow-gray-800">
         <div>
 
-            <div class="col-span-2 flex m-4 justify-center gap-3 items-center select-none cursor-pointer  hover:scale-105 hover:text-indigo-200 transition-all duration-100 ease-linear">
+            <div class="col-span-2 flex m-4 justify-center gap-3 items-center select-none cursor-pointer scale-102 hover:scale-105 hover:text-indigo-200 transition-all duration-100 ease-linear">
                 <img src="../images/icon.png" alt="image of a gulp" class="hover:rotate-6 transition-all ease-linear">
                 <div class="font-dancing text-4xl">FoodForGood</div>
             </div>
 
-            <div class="text-center capitalize animate-chkbo text-lg text-teal-300">made with &hearts; by ch33kaboo</div>
-            <div class="text-center capitalize select-none text-indigo-200 my-2 cursor-pointer hover:scale-110 transition-all ease-in">contact me</div>
-            <div class="text-center capitalize select-none text-indigo-200 my-2 cursor-pointer hover:scale-110 transition-all ease-in">support us</div>
+            <div class="text-center capitalize animate-chkbo text-lg text-teal-300 scale-102">made with &hearts; by ch33kaboo</div>
+            <a class="text-center capitalize select-none text-indigo-200 my-2 cursor-pointer scale-102 hover:scale-110 transition-all ease-in block" href="https://github.com/ch33kaboo/">contact me</a>
+            <a class="text-center capitalize select-none text-indigo-200 my-2 cursor-pointer scale-102 hover:scale-110 transition-all ease-in block" href="https://github.com/ch33kaboo/">support us</a>
         </div>
     </footer>
 </body>
