added a card, lasagna yummy

--- a/public/index.html
+++ b/public/index.html
@@ -347,6 +347,43 @@
 
 
             <div class="card"> <!-- annother card -->
+                <img src="../images/foods/lasagna.jpg" alt="lasagna" class="w-full h-64 object-cover">
+                <div class="card-description">
+                    <div class="card-title">lasagna</div>
+                    <div class="btns-wrapper">
+                        <div class="card-btn-ingredients">
+                            <svg class="svg-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="949.984px" height="949.984px" viewBox="0 0 949.984 949.984" style="enable-background:new 0 0 949.984 949.984;" xml:space="preserve"> <g> <g> <path d="M623.393,949.092c13.899,0,25.1-11.299,25.1-25.1v-49.799c-55,19.699-113.6,30.1-173.5,30.1s-118.6-10.301-173.5-30.1 v49.799c0,13.9,11.3,25.1,25.1,25.1H623.393z"/> <path d="M882.292,115.292c-40.6-30.2-98-21.8-128.3,18.8l-180.6,242.7h228.6l99.1-133.2 C931.292,202.993,922.893,145.593,882.292,115.292z"/> <path d="M310.292,849.492c51.3,18.5,106.8,28.5,164.7,28.5s113.4-10,164.7-28.5c168.899-60.699,292.899-212.699,310.1-398.599 c2.4-25.7-18-47.9-43.8-47.9h-123.6h-228.5h-509.9c-25.8,0-46.2,22.2-43.8,47.9C17.392,636.793,141.392,788.793,310.292,849.492z" /> <polygon points="155.692,239.893 190.292,155.693 279.092,116.792 189.592,82.693 155.692,0.893 121.692,82.693 32.192,116.792  120.992,155.693 		"/> </g> </g> </svg>
+                            <div class="inline-block">ingredients</div>
+
+                        </div>
+                        <div class="card-btn-origins">
+                            <svg class="svg-icon" width="512px" height="512px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M504 255.531c.253 136.64-111.18 248.372-247.82 248.468-59.015.042-113.223-20.53-155.822-54.911-11.077-8.94-11.905-25.541-1.839-35.607l11.267-11.267c8.609-8.609 22.353-9.551 31.891-1.984C173.062 425.135 212.781 440 256 440c101.705 0 184-82.311 184-184 0-101.705-82.311-184-184-184-48.814 0-93.149 18.969-126.068 49.932l50.754 50.754c10.08 10.08 2.941 27.314-11.313 27.314H24c-8.837 0-16-7.163-16-16V38.627c0-14.254 17.234-21.393 27.314-11.314l49.372 49.372C129.209 34.136 189.552 8 256 8c136.81 0 247.747 110.78 248 247.531zm-180.912 78.784l9.823-12.63c8.138-10.463 6.253-25.542-4.21-33.679L288 256.349V152c0-13.255-10.745-24-24-24h-16c-13.255 0-24 10.745-24 24v135.651l65.409 50.874c10.463 8.137 25.541 6.253 33.679-4.21z"/></svg>
+                            <div class="inline-block">origins</div>
+                        </div>
+                        <div class="card-btn-watch">
+                            <svg class="svg-icon" width="28px" height="28px" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M5.25 5.5C3.45507 5.5 2 6.95508 2 8.75V19.25C2 21.0449 3.45507 22.5 5.25 22.5H14.75C16.5449 22.5 18 21.0449 18 19.25V8.75C18 6.95507 16.5449 5.5 14.75 5.5H5.25Z"/> <path d="M23.1232 20.6431L19.5 17.0935V10.9989L23.1121 7.3706C23.8988 6.58044 25.248 7.13753 25.248 8.25251V19.7502C25.248 20.8577 23.9143 21.4181 23.1232 20.6431Z"/>
+                            </svg>  
+                            <div class="inline-block">watch</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="fav-btn">
+                    <button class="group relative px-4 text-sm">
+                        <div class="group-focus:opacity-0">
+                            <svg class="w-6 h-6 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"></path></svg>
+                            <div class="inline-block">add to favorite</div>
+                        </div>
+
+                        <div class="inset-0 hidden items-center justify-center group-focus:absolute group-focus:flex">
+                            <svg class="w-6 h-6 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"></path></svg>
+                            <div class="inline-block">added to favorite</div>
+                        </div>
+                    </button>
+                </div> 
+            </div>
+
+
+            <div class="card"> <!-- annother card -->
                 <img src="../images/foods/suchi.webp" alt="suchi" class="w-full h-64 object-cover">
                 <div class="card-description">
                     <div class="card-title">suchi</div>
