--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,10 @@
                         </div>
 
                         <div class="inset-0 hidden items-center justify-center group-focus:absolute group-focus:flex">
-                            <svg class="w-6 h-6 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"></path></svg>
+                            <svg class="h-6 w-6 flex-none fill-sky-100 stroke-sky-500 stroke-2 -ml-3 mr-1" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="11" />
+                                <path d="m8 13 2.165 2.165a1 1 0 0 0 1.521-.126L16 9" fill="none" />
+                            </svg>
                             <div class="inline-block">added to favorite</div>
                         </div>
                     </button>
@@ -301,7 +304,10 @@
                         </div>
 
                         <div class="inset-0 hidden items-center justify-center group-focus:absolute group-focus:flex">
-                            <svg class="w-6 h-6 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"></path></svg>
+                            <svg class="h-6 w-6 flex-none fill-sky-100 stroke-sky-500 stroke-2 -ml-3 mr-1" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="11" />
+                                <path d="m8 13 2.165 2.165a1 1 0 0 0 1.521-.126L16 9" fill="none" />
+                            </svg>
                             <div class="inline-block">added to favorite</div>
                         </div>
                     </button>
@@ -412,7 +418,10 @@
                         </div>
 
                         <div class="inset-0 hidden items-center justify-center group-focus:absolute group-focus:flex">
-                            <svg class="w-6 h-6 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"></path></svg>
+                            <svg class="h-6 w-6 flex-none fill-sky-100 stroke-sky-500 stroke-2 -ml-3 mr-1" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="11" />
+                                <path d="m8 13 2.165 2.165a1 1 0 0 0 1.521-.126L16 9" fill="none" />
+                            </svg>
                             <div class="inline-block">added to favorite</div>
                         </div>
                     </button>
@@ -486,7 +495,10 @@
                         </div>
 
                         <div class="inset-0 hidden items-center justify-center group-focus:absolute group-focus:flex">
-                            <svg class="w-6 h-6 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"></path></svg>
+                            <svg class="h-6 w-6 flex-none fill-sky-100 stroke-sky-500 stroke-2 -ml-3 mr-1" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="11" />
+                                <path d="m8 13 2.165 2.165a1 1 0 0 0 1.521-.126L16 9" fill="none" />
+                            </svg>
                             <div class="inline-block">added to favorite</div>
                         </div>
                     </button>
@@ -523,7 +535,10 @@
                         </div>
 
                         <div class="inset-0 hidden items-center justify-center group-focus:absolute group-focus:flex">
-                            <svg class="w-6 h-6 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"></path></svg>
+                            <svg class="h-6 w-6 flex-none fill-sky-100 stroke-sky-500 stroke-2 -ml-3 mr-1" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="11" />
+                                <path d="m8 13 2.165 2.165a1 1 0 0 0 1.521-.126L16 9" fill="none" />
+                            </svg>
                             <div class="inline-block">added to favorite</div>
                         </div>
                     </button>
